Bug 113230 - Crash in: writerfilter::dmapper::DomainMapper_Impl::finishParagraph(std::shared_ptr<writerfilter::dmapper::PropertyMap> const &)
Summary: Crash in: writerfilter::dmapper::DomainMapper_Impl::finishParagraph(std::shar...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.4 target:6.4....
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2017-10-18 17:52 UTC by jan.prochaska
Modified: 2019-11-27 20:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["writerfilter::dmapper::DomainMapper_Impl::finishParagraph(std::shared_ptr<writerfilter::dmapper::PropertyMap> const &)"]


Attachments
File that causes office to crash (1.02 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-10-18 17:52 UTC, jan.prochaska
Details
bt with debug symbols (13.96 KB, text/plain)
2017-10-18 19:20 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jan.prochaska 2017-10-18 17:52:35 UTC
Created attachment 137080 [details]
File that causes office to crash

This bug was filed from the crash reporting server and is br-6af67fec-f90f-4913-8547-23fc00b7a099.
=========================================

The office can't open attached file and always crashes.
Comment 1 Julien Nabet 2017-10-18 19:20:52 UTC
Created attachment 137083 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, when I tried to open the file, I got this message:
"An error occurred during opening the file. This may be caused by incorrect file contents.
The error details are:
SAXException: No input source
Proceeding with import may cause data loss or corruption, and application may become unstable or crash.

Do you want to ignore the error and attempt to continue loading the file?"
Yes or No

If clicking Yes, the file opens
if clicking "No", LO crashes

I attached a bt with symbols
Comment 2 Xisco Faulí 2017-10-19 19:47:15 UTC
it crashes back to

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

@Caolán, Michael, one for you?
Comment 3 Commit Notification 2017-10-20 11:06:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f4674c7c123a667f4febbbb96b1a1d0e083f19c

Resolves: tdf#113230 crash in finishParagraph

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2017-10-20 14:03:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=226e6b1c4e915498d04136cf1b7ddcc75ef95fc8&h=libreoffice-5-4

Resolves: tdf#113230 crash in finishParagraph

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-09-26 08:31:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0dd1d80f48e94c4cd16095bace52664ce1e8a3a9

writerfilter: fix crash on import of tdf113230-1.docx

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-11-27 20:46:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/039a66e911ce6e2b339774b438b7bd8c46e5a592

crashtesting: failure on import of tdf113230-1.docx

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-11-27 20:47:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6487eb6298ce8aafaa88b773538af71bcf63d44d

crashtesting: failure on import of tdf113230-1.docx

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.