Resolves: tdf#113230 crash in finishParagraph

Change-Id: I94535a51a87be097ff7356edff935877b42c3272